elastic-search/elastic-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: elasticsearch
  namespace: nasruddinkhan786-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: elasticsearch
    spec:
      volumes:
        - name: elasticsearch-volume
          persistentVolumeClaim:
            claimName: elasticsearch-pvc
      containers:
        - name: elasticsearch
          image: 'elasticsearch:8.8.0'
          resources:
            limits:
              memory: 2Gi
          volumeMounts:
            - name: elasticsearch-volume
              mountPath: /usr/share/elasticsearch/data
