elastic-search/elastic-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: elastic-routes
  namespace: nasruddinkhan786-dev
spec:
  to:
    kind: Service
    name: elasticsearch
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  port:
    targetPort: 9200
